# Gas-station-software

./: Login.py  README.md  Sales.py  accounting.py  accounting_formulae.py  accounts.py  application.css  calculator.py  controller.py  database_handler.py  debtors.py  definitions.py  dips.py  double_entry.py  gas-station-software.gresource.xml  gas-station-software.in  gi_composites.py  inventory.py  julaw.db  main.py  meson.build  notebook.py  purchases.py  settings.py  setup.py  sql.txt
data/: application.css  controller.glade  dialog-account.glade  julaw.db  julaw.sql  meson.build  topmenu.glade
data/screenshots/: meson.build
po/: POTFILES  meson.build
src/: Login.py  Lubricants.py  OtherSales.py  Sales.py  __init__.py  controller.py  database_handler.py  definitions.py  dips.py  inventory.py  main.py  notebook.py  settings.py
src/libaccounting/: accounting.py  accounting_formulae.py  accounts.py  dialog_account.py  double.py  double_entry.py
src/reports/: __init__.py
src/utils/: Datetime.py  __init__.py  calculator.py  cellrender.py
